--- a/task-list/style.css
+++ b/task-list/style.css
@@ -23,16 +23,41 @@ nav li{
 }
 
 article {
+    display: flex;
+    background-color: black;
+    color: black;
+    max-width: 95%;
+    padding-bottom: 5px;
+    margin: auto;
+
+}
+
+.book {
     background-color: red;
     color: black;
-    width: 20%;
-    padding-bottom: 5px;
+    margin: 60px;
+    border: 5px solid rgb(84, 0, 0);
+}
+
+.book img {
+    display: block;
+    width: 140px;
+    height: 220px;
+    margin: auto;
+}
+
+h2 {
+    height: 5%;
+    text-align:center;
 }
 
 h3 {
     background-color: black;
     color: red;
     width: 90%;
+    text-align: center;
+    margin: auto;
+    border: 5px solid rgb(84, 0, 0);
 }
 
 .grid-container {
@@ -42,6 +67,7 @@ h3 {
     background-color: red;
     grid-column-start: 1;
     grid-column-end: 4;
+    margin: auto;
 }
 
 .grid-item {
@@ -100,6 +126,50 @@ h3 {
     cursor: pointer;
   } 
 
-  #edbio {
-    color: blue;
+  #edbio .modal-content {
+    background-color: blue;
+    color: white;
   }
+
+  #lsbio .modal-content {
+    background-color: goldenrod;
+  }
+
+  #axbio .modal-content {
+    background-color: purple;
+    color: white;
+  }
+
+  #dkbio .modal-content {
+    background-color: green;
+  }
+
+  #fkbio .modal-content {
+    background-color: rgb(0, 158, 108);
+  }
+
+  #lgbio .modal-content {
+    background-color: gray;
+  }
+
+  #pdbio .modal-content {
+    background-color: white;
+  }
+
+  #kmbio .modal-content {
+    background-color: cyan;
+  }
+
+  #cmbio .modal-content {
+    background-color: magenta;
+  }
+
+  #mmbio .modal-content {
+    background-color: orange;
+  }
+
+  #tmbio .modal-content {
+    background-color: rgb(0, 0, 74);
+    color: white;
+  }
+
